# ppyd-gol

./: .gitignore  CMakeLists.txt  Makefile  README.md  mk.old
.github/workflows/: build-main-report.typ  build-main-report.yaml  learn-github-actions.yml
data/: c2-orthogonal.rle  diag-glider.rle  glider.rle  golly-ticker.rle  mini.rle
docker/: Dockerfile
executor/: client.py  file_sweep.yaml  main.py  process_management.py  requirements.txt  run_item.py  scaling2_sweep.yaml  scaling3_sweep.yaml  scaling4_sweep.yaml  scaling_sweep.yaml  server.py  tess.py  utils.py  wandb_agent.py
reports/: algo.typ  cite.csl  config.typ  main.typ  main2.typ  refs.bib
reports/images/results/: project.csv
runs-save/: Makefile  get_communications.py  get_file.py  get_linear_in_os.py  get_strong_scale.py  get_weak_scale.py  main.py
src/: CMakeLists.txt  canvas.cpp  canvas.h  canvas.hxx  golio.cpp  golio.h  main.cpp  main_par.cpp  mpi_utils.cpp  mpi_utils.h  test_par_src.cpp  test_src.cpp  utils.cpp  utils.h  utils.hxx  vec2.cpp
src/main/: CMakeLists.txt
src/main/include/: arg_parse.h  canvas.h  mpi_arg_parse.h  mpi_canvas.h  mpi_canvas.hxx  mpi_canvas_debug.h  mpi_utils.h  state_loader.h  utils.h  vec2.h
src/main/src/: arg_parse.cpp  canvas.cpp  main.cpp  main_par.cpp  mpi_arg_parse.cpp  mpi_canvas.cpp  mpi_canvas_debug.cpp  mpi_utils.cpp  state_loader.cpp  utils.cpp  vec2.cpp
src/test/: CMakeLists.txt
src/test/src/: test_par_src.cpp  test_src.cpp
